# Team24

./: compose.yml  pyproject.toml
my_service_1/: Dockerfile.dev  pyproject.toml
my_service_1/xc_chatbot/: main.py
